<resources>

    <string name="app_name">Darts 501 counter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Fléchettes 501</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_display_message">activity</string>
    <string name="button_enterPlayers">Saisir les joueurs</string>
    <string name="button_startGame">Commencer</string>
    <string name="title_activity_enter_players">Saisissez les joueurs</string>
    <string name="player1">Joueur 1</string>
    <string name="player2">Joueur 2</string>
    <string name="player3">Joueur 3</string>
    <string name="player4">Joueur 4</string>
    <string name="button_validatePlayers">Valider</string>
    <string name="title_activity_scores">Scores</string>
    <string name="title_activity_results">Resultats</string>
    <string name="score">Score</string>
    <string name="button_computeResults">Compter</string>
    <string name="button_validateResults">Valider</string>
    <string name="button_restart">Recommencer</string>
    
</resources>