<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player1" />

    <EditText
        android:id="@+id/player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player2" />

    <EditText
        android:id="@+id/player3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player3" />

    <EditText
        android:id="@+id/player4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="validatePlayers"
        android:text="@string/button_validatePlayers" />

</LinearLayout>